# VCMP-SQLite

./: CMakeLists.txt  LICENSE  README.md
cbp/: Module.cbp  SQLite.cbp  default.workspace
include/: SqImports.h
source/: CMakeLists.txt  Functions.cpp  Functions.h  main.cpp  main.h
